tests/compile-fail/tracked_fn_return_not_salsa_value.stderr
error[E0277]: the tracked function's return type `NotSalsaValue<'db>` does not implement `SalsaValue`
  --> tests/compile-fail/tracked_fn_return_not_salsa_value.rs:14:58
   |
14 | fn tracked_fn<'db>(_db: &'db dyn Db, _input: MyInput) -> NotSalsaValue<'db> {
   |                                                          ^^^^^^^^^^^^^^^^^^ does not implement `SalsaValue`
   |
help: the trait `salsa::salsa_value::helper::SalsaValueOutput<'_, NotSalsaValue<'static>>` is not implemented for `NotSalsaValue<'db>`
  --> tests/compile-fail/tracked_fn_return_not_salsa_value.rs:11:1
   |
11 | struct NotSalsaValue<'db>(PhantomData<fn() -> &'db ()>);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: consider deriving `salsa::SalsaValue` for the tracked function's return type if it is safe to retain across revisions
note: required by a bound in `salsa::plumbing::assert_salsa_value_output`
  --> src/salsa_value.rs
   |
   |     pub const fn assert_salsa_value_output<'db, Static, Output>(_: PhantomData<&'db ()>)
   |                  ------------------------- required by a bound in this function
   |     where
   |         Output: SalsaValueOutput<'db, Static>,
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `assert_salsa_value_output`
